@@ -1,3 +1,11 @@
+2011-02-07  Antti Koivisto  <antti@apple.com>
+
+        Not reviewed.
+        
+        ASSERTS_DISABLED -> ASSERT_DISABLED
+
+        * wtf/BloomFilter.h:
+
 2011-02-06  Ryosuke Niwa  <rniwa@webkit.org>
 
         Unreviewed; speculative Qt build fix.
